# Ray-Tracing

./: CMakeLists.txt  README.md
ext/: CMakeLists.txt
res/shader/: compileshader.bat
src/: main.cpp
src/core/: application.cpp  application.h  main.cpp
test/: CMakeLists.txt  ttest.cpp  xddtest.cpp
